--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
         body {
-            background: linear-gradient(135deg, #d63737, #3a3939);
+            background: linear-gradient(135deg, #d63737, #330303);
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
